winnie css fixes, cookie popup alignment, profile alignment, links

--- a/src/pages/editAccount/EditAccount.module.css
+++ b/src/pages/editAccount/EditAccount.module.css
@@ -5,6 +5,8 @@
 
 .nav {
   text-align: left;
+  padding-left: calc(var(--vertical-padding) - 15px);
+
 }
 
 .navButton, .subNavButton {
@@ -147,6 +149,11 @@
 }
 
 @media only screen and (max-width: 768px) {
+
+  .nav {
+    margin-bottom: 50px;
+    padding-left: 0;
+  }
 
   .profileSection {
     flex-direction: column;
