--- a/src/pages/editCompany/EditCompany.module.css
+++ b/src/pages/editCompany/EditCompany.module.css
@@ -4,6 +4,7 @@
 
 .nav {
   text-align: left;
+  padding-left: calc(var(--vertical-padding) - 15px);
 }
 
 .navButton {
@@ -72,6 +73,7 @@
 
   .nav {
     margin-bottom: 30px;
+    padding-left: 0;
   }
 
 }
