--- a/src/pages/landingPage/LandingPage.module.css
+++ b/src/pages/landingPage/LandingPage.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   text-align: left;
+  padding: 0 20px;
 }
 
 .info {
@@ -13,7 +14,6 @@
 
 .strip1 .info {
   width: 720px;
-  margin-right: 22px;
 }
 
 .title {
