--- a/src/shared.css
+++ b/src/shared.css
@@ -19,6 +19,7 @@
 .select {
   width: 100%;
   height: 50px;
+  padding-right: 25px;
   text-align: center;
   text-align-last:center;
   color: var(--primary-color);
@@ -31,7 +32,9 @@
   background-position: right 10px bottom 50%;
 	-moz-appearance: none;
 	-webkit-appearance: none;
-	appearance: none;
+  appearance: none;
+  overflow: hidden;
+  text-overflow: ellipsis
 }
 
 .section {
