--- a/src/shared/cookies/Cookies.module.css
+++ b/src/shared/cookies/Cookies.module.css
@@ -15,14 +15,21 @@
   display: flex;
   justify-content: center;
 }
+
+
 .innerWrapper {
   display: flex;
+  width: 100%;
 }
 
 .inner  {
+  width: 1060px;
+  max-width: calc(100% - 300px);
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0 auto;
+  box-sizing: content-box;
 }
 
 .optionsContainer {
@@ -31,12 +38,11 @@
 }
 
 .reject {
-  flex-grow: 1;
-  flex-shrink: 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-right: 20px;
+  position: absolute;
+  right: 20px;
 }
 
 .reject button {
@@ -44,17 +50,29 @@
   line-height: 1.2em;
   height: 34px;
   padding: 0 8px;
-  margin-left: 30px;
-}
-
-.popupWrapper {
-  max-width: 90%;
-  width: 1060px;
-  margin: 0 auto;
 }
 
 .popup {
-  max-width: 100%;;
+  width: 1060px;
+  margin: 0 auto;
+  max-width: calc(100% - 300px);
+  color: var(--primary-text);
+}
+
+.popup .row {
+  width: 800px;
+  max-width: 100%;
+  position: relative;
+}
+
+.smallCheck{
+  display: none;
+}
+
+.check {
+  position: absolute;
+  right: -65px;
+  bottom: 0;
 }
 
 .buttonContainer button {
@@ -85,10 +103,6 @@
   margin-left: 30px;
 }
 
-.popup {
-  align-items: flex-end;
-}
-
 .label {
   font-weight: bold;
 }
@@ -103,7 +117,39 @@
 
 .row {
   margin: 18px 0;
-  widtH: 100%;
+  width: 100%;
+  color: var(--primary-text);
+}
+
+.largeCheck {
+  display: flex;
+  align-items: flex-end;
+}
+
+@media only screen and (max-width: 1360px) {
+
+  .innerWrapper, .popup {
+    padding: 0 20px;
+  }
+
+  .popup {
+    padding-right: 80px;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+  }
+
+  .inner {
+    width: 100%;
+    max-width: 100%;;
+  }
+
+  .reject {
+    position: relative;
+    right: 0;
+    padding-left: 20px;
+  }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -118,7 +164,7 @@
   .inner {
     flex-direction: column;
     max-width: 100%;
-    padding: 0 20px;
+    padding: 0;
     align-items: flex-start;
   }
 
@@ -154,5 +200,26 @@
     font-size: 12px;
   }
 
+  .withCheck {
+    display: inline-block;
+    max-width: calc(100% - 80px);
+  }
 
+  .largeCheck {
+    display: none;
+  }
+
+  .smallCheck {
+    display: inline-block;
+  }
+
+  .check {
+    position: relative;
+    float: right;
+    right: 0;
+  }
+
+  .popup  {
+    padding-right: 20px;
+  }
 }
